--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,19 +1,39 @@
 body {
 	font-family: 'Open Sans', 'Arial', sans-serif;
-	font-size: 14pt;
+	font-size: 12pt;
+}
+
+header{
+  display: flex;
+/*  background: #fff;
+  border-bottom: 3px solid #50C7C7;*/
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+/*  justify-content: space-between;*/
 }
 
 .jamie {
-	text-align: center;
+	display: flex;
+	justify-content: center;
 	font-size: 3em;
 	padding: 20px;
 	color: #600d19;
 }
 
+.topnav{
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
 .nav_item{
 	color: #000;
 	font-size: 1em;
-	padding: 5px 0px;
+	padding: 5px 10px;
 	text-align: center;
 }
 
@@ -22,21 +42,57 @@ body {
 	text-decoration: none;
 }
 
-.nav_item a:hover{
+.nav_item a:hover, a:focus{
 	text-decoration: underline;
 }
+
+/*.nav_item a:focus{
+	text-decoration: underline;
+}*/
 
 .topnav .current{
 	color: #FFF;
 	background-color: #600d19;
 }
 
-.about_pic, .dw, .ii, .atomic, .propub, .priorityorg, .gallery{
+a.skip{
+  background: white;
+  left: 0;
+  padding: 3px;
+  position: absolute;
+  top: -40px;
+  -webkit-transition: top .25s ease-in-out;
+  transition: top .25s ease-in-out;
+  z-index: 1;
+}
+
+a.skip:focus{
+  top: 5px;
+  color: #000;	
+}
+
+.dw, .ii, .atomic, .propub, .priorityorg, .gallery{
 	display: block;
-	margin-left: auto;   /* adapted from: https://www.w3schools.com/howto/howto_css_image_center.asp*/
+	margin-left: auto;    adapted from: https://www.w3schools.com/howto/howto_css_image_center.asp
 	margin-right: auto;
 	width: 500px;
 	padding: 20px 20px;
+}
+
+.container{
+	display: grid;
+	grid-template-columns: auto;
+	grid-template-rows: auto auto;
+}
+
+.about_mobile {
+	display: grid;
+	margin-left: auto;    /*adapted from: https://www.w3schools.com/howto/howto_css_image_center.asp*/
+	margin-right: auto;
+}
+
+.about_full{
+	display: none;
 }
 
 h2{
@@ -48,6 +104,7 @@ h2{
 h3{
 	font-style: italic;
 	text-align: center;
+	padding: 10px 20px;
 }
 
 h4{
@@ -60,11 +117,13 @@ h4{
 }
 
 p{
+	font-size: .85em;
 	padding: 10px 20px;
 	line-height: 1.25em;
 }
 
 ul.copy{
+	font-size: .85em;
 	list-style-type: disc;
 	padding: 10px 60px;
 	line-height: 1.25em;
@@ -74,10 +133,22 @@ ul.copy{
 	padding-left: 40px;
 }
 
+.gallery{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: center;
+}
+
 .gallery img{
-	border: 1px solid black;
-	margin: 10px 0px;
-	box-shadow: 10px 10px;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  /* adapted from: https://www.w3schools.com/css/css3_shadows.asp;*/
+}
+
+div.caption{
+	display: flex;
+  	flex-direction: column;
+  	align-items: center;
+  	font-size: .75em;
+  	margin-bottom: 20px;
 }
 
 footer{
@@ -85,5 +156,87 @@ footer{
 	color: #FFF;
 	padding: 20px;
 	text-align: center;
-	font-size: .5em;
+	font-size: .75em;
+}
+
+@media all and (min-width: 600px){
+.container{
+	display: grid;
+	grid-template-columns: 240px auto;
+	grid-template-rows: auto;
+}
+
+.about_full {
+	display: grid;
+	margin-left: 10px;
+	margin-bottom: 20px;
+/*	margin-left: auto;    adapted from: https://www.w3schools.com/howto/howto_css_image_center.asp
+	margin-right: auto;*/
+	width: 230px;
+	grid-column: 1 / span 1;
+/*	overflow: hidden;*/
+}
+
+.about_mobile{
+	display: none;
+}
+
+.bio {
+	grid-column: 2 / span 1;
+	font-size: 1em;
+}
+
+.gallery img{
+	display: flex;
+  	flex-direction: row;
+  	justify-content: center;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  /* adapted from: https://www.w3schools.com/css/css3_shadows.asp;*/
+}
+}
+
+@media all and (min-width: 900px){
+header{
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+.topnav{
+    flex-direction: row;
+    align-content: flex-end;
+/*    justify-content: flex-end;*/
+
+  }
+
+/* .jamie{
+ 	flex-direction: row;
+ } 
+*/
+/* .nav_item a{
+    padding: 10px;
+  }
+*/
+.container{
+	display: grid;
+	grid-template-columns: 420px auto;
+	grid-template-rows: auto;
+}
+
+.about_full {
+	display: grid;
+	margin-left: 10px;
+	margin-bottom: 20px;
+/*	margin-left: auto;    adapted from: https://www.w3schools.com/howto/howto_css_image_center.asp
+	margin-right: auto;*/
+	width: 400px;
+	grid-column: 1 / span 1;
+/*	overflow: hidden;*/
+}
+
+.about_mobile{
+	display: none;
+}
+
+.bio {
+	grid-column: 2 / span 1;
+	font-size: 1.25em;
 }
