--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -163,33 +163,33 @@ ul.copy{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
   text-align: center;
 }
 
-.gallery:hover .image {
+.container:hover .image .caption{
   opacity: 0.3;
 }
 
-.gallery:hover .caption {
+.container:hover .caption {
   opacity: 1;
 }
 
 .text {
   background-color: #600d19;
   color: white;
-  font-size: 16px;
+  font-size: .75em;
   padding: 16px 32px;
 }
 
 
-div.caption{
+/*div.caption{
 	display: flex;
   	flex-direction: column;
   	align-items: center;
   	font-size: .75em;
   	margin-bottom: 20px;
-}
+}*/
 
 footer{
 	position: fixed;
@@ -251,6 +251,7 @@ footer{
   	flex-flow: row wrap;
   	justify-content: center;
 }
+}
 
 @media all and (min-width: 900px){
 header{
@@ -294,4 +295,5 @@ h1 .jamie{
 	width: 350px;
 	padding: 20px;
 	margin: 5px;
+}
 }
