--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -98,11 +98,56 @@ a.skip:focus{
 	display: none;
 }
 
-/*grid ux & service design pages*/
+/*grid ux page*/
 .container_projects{
 	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: auto;
+	grid-template-rows: auto auto auto auto auto auto auto auto auto;
+}
+
+.atomic_head {
+	display: grid;
+	grid-row: 1;
+}
+
+.atomic_img {
+	display: grid;
+	grid-row: 2;
+}
+
+.atomic_content {
+	display: grid;
+	grid-row: 3;
+}
+
+.propub_head {
+	display: grid;
+	grid-row: 4;
+}
+
+.propub_img {
+	display: grid;
+	grid-row: 5;
+}
+
+.propub_content {
+	display: grid;
+	grid-row: 6;
+}
+
+.priorityorg_head {
+	display: grid;
+	grid-row: 4;
+}
+
+.priorityorg_img {
+	display: grid;
+	grid-row: 5;
+}
+
+.priorityorg_content {
+	display: grid;
+	grid-row: 6;
 }
 
 /*header & copy styling*/
@@ -113,7 +158,6 @@ h2{
 	font-size: 2em;
 	padding: 5px 10px;
 	text-align: center;
-	width: 
 }
 
 h3{
@@ -230,6 +274,7 @@ footer{
 
 @media all and (min-width: 600px){
 
+/*navigation*/
 	.topnav{
 	  display: flex;
 	  list-style: none;
@@ -239,6 +284,7 @@ footer{
 	  margin-bottom: 20px;
 	}
 
+/*grid about page*/
 	.container_about{
 		display: grid;
 		grid-template-columns: 240px auto;
@@ -262,28 +308,64 @@ footer{
 		font-size: 1.2em;
 	}
 
-	/*grid ux & service design pages*/
+/*grid ux page*/
 	.container_projects{
 		display: grid;
 		grid-template-columns: 520px auto;
 		grid-template-rows: auto auto auto auto auto auto;
 	}
 
-	.atomic_head{
+	.atomic_head {
 		display: grid;
-		grid-row: 1 / -1;
-		grid-column: 1 / span 2;
+		grid-column: 1 / -1;
+		grid-row: 1;
 	}
 
-	.atomic{
+	.atomic_img {
 		display: grid;
-		grid-row: 2 / span 1;
+		grid-row: 2;
 		grid-column: 1 / span 1;
-	} 
+	}
 
-	.atomic_content{
+	.atomic_content {
 		display: grid;
-		grid-row: 2 / span 1;
+		grid-row: 2;
+		grid-column: 2 / span 1;
+	}
+
+	.propub_head {
+		display: grid;
+		grid-row: 3;
+		grid-column: 1 / -1;
+	}
+
+	.propub_img {
+		display: grid;
+		grid-row: 4;
+		grid-column: 1 / span 1; 
+	}
+
+	.propub_content {
+		display: grid;
+		grid-row: 4;
+		grid-column: 2 / span 1;
+	}
+
+	.priorityorg_head {
+		display: grid;
+		grid-row: 5;
+		grid-column: 1 / -1;
+	}
+
+	.priorityorg_img {
+		display: grid;
+		grid-row: 6;
+		grid-column: 1 / span 1; 
+	}
+
+	.priorityorg_content {
+		display: grid;
+		grid-row: 6;
 		grid-column: 2 / span 1;
 	}
 
