--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -138,7 +138,7 @@ a.skip:focus{
   display: grid;
   grid-column: 1 / -1;
   grid-row: 1 / span 1;
-  background-image: url("../images/jamie.jpg");
+  background-image: url("../images/jamie_mobile.jpg");
   background-color: black;
 }
 
